test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionPrologue/OutSectMissingSemiColon/Inputs/script2.t
SECTIONS {
  FOO 0x1000 {
    *(*foo*)
  }
}